# nhspy-plotthedots

./: .gitignore  .nojekyll  LICENSE  README.md  about.html  contribute.html  environment.yml  faq.html  index.html  listings.json  pyproject.toml  requirements.txt  search.json  setup.py  sitemap.xml  updates.html  updates.xml
.github/workflows/: codecov.yml  codeql.yml  pytest_flake8.yml  quarto_publish.yml
dev/: package.ipynb  spc.ipynb
docs/: _quarto.yml  about.qmd  faq.qmd  index.qmd
docs/_site/: about.html  contribute.html  faq.html  index.html  listings.json  robots.txt  search.json  sitemap.xml  updates.html  updates.xml
docs/_site/documentation/: index.html  pandas_spc_x_calc.html
docs/_site/tutorials/: index.html  pandas.html
docs/documentation/: index.qmd  pandas_spc_x_calc.qmd
docs/posts/rap-maturity/: index.qmd
docs/posts/welcome/: index.qmd
docs/tutorials/: index.qmd  pandas.qmd
documentation/: index.html  pandas_spc_x_calc.html
my_project/dev/: spc.ipynb
nhspy_plotthedots/: pandas_spc_calculations.py  plotly_spc_chart.py  spc_calculations.py
nhspy_plotthedots/dev/: spc.ipynb
nhspy_plotthedots/utilities/: special_cause_flag.py
posts/rap-maturity/: index.html
posts/welcome/: index.html
tests/unittests/: part_of_two_in_three.py  test_limits_calculations.py  test_pandas_spc_x_calc.py  test_part_of_seven_trend.py  test_part_of_two_in_three.py  test_processing_steps.py  test_seven_point_one_side_mean.py  test_seven_point_trend.py  test_special_cause_flag.py  test_two_in_three.py
tutorials/: index.html  pandas.html
(+3 files in other folders)
